--- a/templates/result.html
+++ b/templates/result.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeWindow()">Close</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal -->
