--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <input id="jobId" type="hidden" value="{{ job_id }}">
+    <div id="upload" class="container" style="display: none">
     <div style="height: 70px"></div>
         <div class="col-md-4 col-md-offset-4">
             <form enctype="multipart/form-data" class='form-login' action="/upload/" method="post">
@@ -19,9 +20,121 @@
                     <span style="color: red">{{ error }}</span>
                 </div>
                 <button type="reset" style="margin: 0 5px 0 5px" class="btn btn-default pull-right">reset</button>
-                <button type="submit" class="btn btn-primary pull-right">calculate</button>
+                <button type="submit" class="btn btn-primary pull-right">process</button>
             </form>
         </div>
-    </div> <!-- /container -->
+    </div>
+    <div id="preprocess" class="container" style="display: none">
+        <div class="row">
+            <div class="col-lg-8">
+                <div id="table" class="table-responsive" style="height: 500px">
+                    {{ html }}
+                </div>
+                <br>
+                <div class="alert alert-warning" role="alert">
+                    <label>Please confirm and check the value above before submission!</label>
+                    <div class="pull-right" style="clear: both">
+                        <a class="btn btn-primary" href="/submit/">submit</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <form action="/upload/" method="get">
+                    <div class="form-group">
+                        <label>Structure volume:</label>
+                        <select id="structureColumn" onchange="changeName(this)">
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="checkbox-inline">
+                            <input type="checkbox" name="RadialDistributionFunction">
+                            RadialDistributionFunction
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <label class="checkbox-inline">
+                            <input type="checkbox" name="PartialRadialDistributionFunction">
+                            PartialRadialDistributionFunction
+                        </label>
+                    </div>
+                    <div class="progress" style="display: none">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                            <span>Processing</span>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-success" onclick="featurize(this.parentNode)">calculate</button>
+                    <button type="reset" class="btn btn-danger">reset</button>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            let jobId = $("#jobId").val();
+            if (jobId != ""){
+                $("#preprocess").removeAttr("style");
+                decorateTable()
+            }
+            else {
+                $("#upload").removeAttr("style");
+            }
+            createChoice()
+        });
+
+        // Add style when loading new table
+        function decorateTable() {
+            $("table").addClass("table table-striped table-bordered text-nowrap")
+        }
+
+        // Create structure choice while refresh table
+        function createChoice() {
+            let tableHead = $("thead");
+            let columns = tableHead.find("th");
+            let str = '<option>None</option>';
+            for (let i = 0; i < columns.length; i++){
+                let html = $(columns[i]).html();
+                if (html != ""){
+                    str += '<option value="' + html + '">' + html + '</option>'
+                }
+                $("#structureColumn").html(str)
+            }
+        }
+
+        // Calculate new chemical features
+        function featurize(option) {
+            $(".progress").removeAttr("style");
+            let opt = $(option).serializeArray();
+            let optList = "?";
+            for (let i = 0; i < opt.length; i++){
+                optList += opt[i]["name"];
+                optList += "=on&"
+            }
+            optList = optList.slice(0, optList.length - 1);
+            $.ajax({
+                url: "/upload" + optList,
+                type: "GET",
+                success: function (retVal) {
+                    if (typeof (retVal["error"]) != "undefined" ) {
+                        console.log(retVal["error"])
+                    }
+                    else {
+                        let html = retVal['html'];
+                        $("#table").html(html);
+                        decorateTable();
+                    }
+                    $(".progress").attr("style", "display: none")
+                },
+                error:function (msg) {
+                    $(".progress").attr("style", "display: none");
+                    console.log(msg)
+                }
+            })
+        }
+
+        // Change the name of dom
+        function changeName(ele) {
+            ele.name = $(ele).val();
+        }
+    </script>
 {% endblock %}
