--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,8 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <title>{% block title %}base{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min.css' %}">
