--- a/templates/upload.html
+++ b/templates/upload.html
@@ -57,11 +57,84 @@
     </div>
     <div id="preprocess" class="container" style="display: none">
         <div class="row">
+            <label class="col-lg-offset-2" style="font-size: xx-large">Preview</label>
+            <label class="col-lg-offset-4" style="font-size: xx-large">Conversion</label>
+        </div>
+        <div class="row">
             <div class="col-lg-6">
                 <div id="table" class="table-responsive" style="height: 500px">
                     {{ html }}
                 </div>
-                <br>
+                <label class="col-lg-offset-4" style="font-size: xx-large">Toolkit</label>
+                <div style="border: 1px solid #ddd; border-radius: 5px 5px 0 0;">
+                    <br>
+                    <form class="form-horizontal" action="/upload/" method="get">
+                        <div class="form-group">
+                            <input type="hidden" name="rename">
+                            <label class="col-lg-4 control-label">Rename volume:</label>
+                            <div class="col-lg-4">
+                                <select id="renameColumn" class="form-control" onchange="changeName(this)"></select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-4 control-label">New name:</label>
+                            <div class="col-lg-4">
+                                <input class="form-control" name="newName" onchange="changeName(this)">
+                            </div>
+                            <div class="col-lg-2">
+                                <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode)">
+                                    <span class="glyphicon glyphicon-play"></span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="progress" style="display: none">
+                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                <span>Processing</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div style="border: 1px solid #ddd; border-radius: 0 0 5px 5px;">
+                    <br>
+                    <form class="form-horizontal" action="/upload/" method="get">
+                        <div class="form-group">
+                            <label class="col-lg-6 control-label">Convert string to structure:</label>
+                            <input type="hidden" name="strToStructure">
+                            <div class="col-lg-4">
+                                <select id="strToStructure" class="form-control" onchange="changeName(this)"></select>
+                            </div>
+                            <div class="col-lg-2">
+                                <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode)">
+                                    <span class="glyphicon glyphicon-play"></span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="progress" style="display: none">
+                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                <span>Processing</span>
+                            </div>
+                        </div>
+                    </form>
+                    <form class="form-horizontal" action="/upload/" method="get">
+                        <div class="form-group">
+                            <label class="col-lg-6 control-label">Convert structure to composition:</label>
+                            <input type="hidden" name="structureToComposition">
+                            <div class="col-lg-4">
+                                <select id="structureToComposition" class="form-control" onchange="changeName(this)"></select>
+                            </div>
+                            <div class="col-lg-2">
+                                <button class="btn btn-success" type="button" onclick="featurize(this.parentNode.parentNode)">
+                                    <span class="glyphicon glyphicon-play"></span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="progress" style="display: none">
+                            <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                <span>Processing</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 <div class="alert alert-warning" role="alert">
                     <label>Please confirm and check the value above before submission!</label>
                     <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target=".bs-example-modal-lg">
@@ -91,7 +164,6 @@
                         <button type="button" class="btn btn-success" onclick="featurize(this.parentNode)">
                             <span class="glyphicon glyphicon-play"></span>
                         </button>
-                        <br>
                         <div id="structureFeaturizers"></div>
                     </div>
                     <div class="progress" style="display: none">
@@ -123,7 +195,6 @@
                         <button type="button" class="btn btn-success" onclick="featurize(this.parentNode)">
                             <span class="glyphicon glyphicon-play"></span>
                         </button>
-                        <br>
                         <div class="form-group" id="compositionFeaturizers"></div>
                     </div>
                 </form>
@@ -190,7 +261,8 @@
         // Add style when loading new table
         function decorateTable() {
             $("table").addClass("table table-striped table-bordered text-nowrap");
-            createCalcList()
+            createCalcList();
+            createChoice();
         }
 
         // Create featurizers choice both for composition and structure
@@ -229,6 +301,9 @@
                 }
                 $("#structureColumn").html(str);
                 $("#compositionColumn").html(str);
+                $("#renameColumn").html(str);
+                $("#strToStructure").html(str);
+                $("#structureToComposition").html(str);
             }
         }
 
@@ -261,7 +336,7 @@
                     progress.attr("style", "display: none");
                     console.log(msg)
                 }
-            })
+            });
         }
 
         // Change the name of dom
